[tool.poetry]
name = "pygoodwe"
version = "0.1.9"
description = "A command line tool and python library to query the GOODWE SEMS Portal APIs."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["goodwe", "solar", "api", "pygoodwe"]
readme = "README.md"

[tool.poetry.urls]
documentation = "https://yaleman.github.io/pygoodwe/"
homepage = "https://github.com/yaleman/pygoodwe"
repository = "https://github.com/yaleman/pygoodwe"
"bug tracker" = "https://github.com/yaleman/pygoodwe/issues"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.1,<0.9.4"
types-requests = "^2.28.11"
pytest = ">=7.1.3,<9.0.0"
mypy = "^1.0"
black = ">=23.1,<25.0"
pylint-pytest = "^1.1.2"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.2"
mkdocstrings = ">=0.20,<0.27"
mkdocstrings-python = ">=0.8,<1.12"
requests-mock = "^1.11.0"
validate-pyproject = ">=0.16,<0.24"
pytest-cov = "^5.0.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.pylint.MASTER]
disable = "W0511"
max-line-length = 150
load-plugins = "pylint_pytest"

[tool.ruff]
line-length = 150

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
