
[project]
name = "pygoodwe"
version = "0.1.10"
requires-python = "<4.0,>=3.9"
dependencies = ["requests<3.0.0,>=2.28.1"]
description = "A command line tool and python library to query the GOODWE SEMS Portal APIs."
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["goodwe", "solar", "api", "pygoodwe"]
readme = "README.md"

[project.urls]
documentation = "https://yaleman.github.io/pygoodwe/"
homepage = "https://github.com/yaleman/pygoodwe"
repository = "https://github.com/yaleman/pygoodwe"
"bug tracker" = "https://github.com/yaleman/pygoodwe/issues"

[dependency-groups]
dev = [
    "ruff>=0.5.1,<0.12.12",
    "types-requests<3.0.0,>=2.28.11",
    "pytest<9.0.0,>=7.1.3",
    "mypy<2.0,>=1.0",
    "pylint-pytest<2.0.0,>=1.1.2",
    "mkdocs<2.0.0,>=1.4.2",
    "mkdocs-material<10.0.0,>=9.0.2",
    "mkdocstrings>=0.20,<0.31",
    "mkdocstrings-python>=0.8,<1.19",
    "requests-mock<2.0.0,>=1.11.0",
    "validate-pyproject>=0.16,<0.25",
    "pytest-cov<7,>=5",
    "ty>=0.0.0a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pylint.MASTER]
disable = "W0511"
max-line-length = 150
load-plugins = "pylint_pytest"

[tool.ruff]
line-length = 150

[tool.mypy]
strict = true
