
[project]
name = "pygoodwe"
version = "0.1.11"
requires-python = "<4.0,>=3.12"
dependencies = ["requests<3.0.0,>=2.28.1"]
description = "A command line tool and python library to query the GOODWE SEMS Portal APIs."
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["goodwe", "solar", "api", "pygoodwe"]
readme = "README.md"

[project.urls]
documentation = "https://yaleman.github.io/pygoodwe/"
homepage = "https://github.com/yaleman/pygoodwe"
repository = "https://github.com/yaleman/pygoodwe"
"bug tracker" = "https://github.com/yaleman/pygoodwe/issues"

[dependency-groups]
dev = [
    "ruff==0.15.4",
    "types-requests>=2.28.11",
    "pytest>=9.0.2",
    "mypy>=1.19.1",
    "pylint-pytest>=1.1.2",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.2",
    "mkdocstrings>=1.0.2",
    "mkdocstrings-python>=2.0.1",
    "requests-mock>=1.11.0",
    "validate-pyproject>=0.16",
    "pytest-cov>=7.0.0",
    "ty>=0.0.0a7",
    "coveralls>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pylint.MASTER]
disable = "W0511"
max-line-length = 150
load-plugins = "pylint_pytest"

[tool.ruff]
line-length = 150

[tool.mypy]
strict = true
